# rust-serialization-bench

./: Cargo.toml  README.md
benches/: bench.rs
src/: bench_alkahest.rs  bench_bincode.rs  bench_rkyv.rs  bench_serde_json.rs  lib.rs  solana_gossip_proto.rs
