[package]
name = "rust_serialization_bench"
version = "0.1.0"
edition = "2021"
authors = ["Luca Ceppelli <ceppelli@gmail.com>"]
description = """
Performance comparison between serialization and deserialization libraries for the Solana Gossip Protocol
"""
readme = "README.md"
license = "MIT"
keywords = ["solana", "protocol", "serialization", "bench"]
categories = ["bench"]
repository = "https://github.com/ceppelli/rust-serialization-bench"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

serde_derive = "1.0"

# https://crates.io/crates/criterion
criterion = "0.4"
# https://crates.io/crates/rand
rand = "0.8"

# https://crates.io/crates/bytecheck
bytecheck = { version = "0.6.10", optional = true }

# https://crates.io/crates/alkahest
alkahest = { version = "0.2", optional = true, features = ["derive"]}
# https://crates.io/crates/bincode
bincode = { version = "1.3", optional = true }
# https://crates.io/crates/rkyv
rkyv = { version = "0.7", features = ["validation"], optional = true }
# https://crates.io/crates/serde
serde = { version = "1.0", features = ["derive"], optional = true }
# https://crates.io/crates/serde_json
serde_json = { version = "1.0", optional = true }
# https://crates.io/crates/prost [Protocol Buffers implementation]
#prost = { version = "0.11", optional = true }

[features]
default = ["alkahest", "bincode", "rkyv", "serde_json"]

alkahest = ["dep:alkahest"]
bincode = ["dep:bincode", "serde"]
rkyv = ["dep:rkyv", "bytecheck"]
serde_json = ["dep:serde_json", "serde"]

[[bench]]
harness = false
name = "bench"
